# lyrie-ai

./: .editorconfig  .env.example  .gitignore  .npmignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OMEGA-BRAIN.md  README.md  SECURITY.md  package.json  tsconfig.json  turbo.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: action-selftest.yml  ci.yml  codeql.yml  nightly.yml  readme-sync.yml  release.yml  sdk-python-ci.yml  (+1 more)
action/: README.md  action.yml  runner-helpers.ts  runner.test.ts  runner.ts
agents/: crash-analysis-agent.md  exploitability-validator-agent.md  function-trace-generator-agent.md  offsec-specialist.md  oss-hypothesis-former-agent.md  oss-investigator-gh-archive-agent.md  oss-report-generator-agent.md
commands/: oss-forensics.md
deploy/: README.md  lyrie.local.yml
docs/: aav.md  architecture.md  contributing.md  evolve.md  getting-started.md  h200-training.md  shield-doctrine.md  v1.1-roadmap.md
locales/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md
personas/: README.md  binary_exploitation_specialist.md  codeql_finding_analyst.md  exploit_developer.md  offensive_security_researcher.md  penetration_tester.md
reports/: pentest-https___lyrie.ai-2026-04-16T09-01-54-531Z.json  pentest-https___lyrie.ai-2026-04-16T09-01-54-531Z.md  pentest-https___lyrie.ai-2026-04-16T10-43-20-842Z.json  pentest-https___lyrie.ai-2026-04-16T10-43-20-842Z.md
research/: README.md
scripts/: backend.ts  cron.ts  daemon.sh  doctor.ts  dream-evolve.ts  governance.ts  hack.ts  init.ts  install.ps1  install.sh  intel.ts  migrate.ts  models.ts  pairing.ts  security-validate.ts  start-all.ts  understand.ts
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/lyrie/: __init__.py  attack_surface.py  cli.py  edits.py  oss_scan.py  proxy.py  redteam.py  scanners.py  shield.py  stages.py  threat_intel.py
sdk/python/tests/: test_attack_surface.py  test_proxy_and_misc.py  test_proxy_async.py  test_redteam.py  test_scanners.py  test_shield.py  test_stages.py
(+101 files in other folders)
